[gd_scene load_steps=26 format=3 uid="uid://ccyt44toeiksg"]

[ext_resource type="PackedScene" uid="uid://b68umguhxojc4" path="res://Player.tscn" id="1_sqd3l"]
[ext_resource type="Script" path="res://DebugText.gd" id="2"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3"]
[ext_resource type="Script" path="res://DebugVector.gd" id="3_ctnmf"]
[ext_resource type="Script" path="res://DebugText2.gd" id="3_kfe6f"]
[ext_resource type="Script" path="res://Damageable.gd" id="4_m84gs"]
[ext_resource type="PackedScene" uid="uid://1rwl3ap70c7p" path="res://SplashText.tscn" id="5_nfn67"]
[ext_resource type="Texture2D" uid="uid://dsdvcxk4g4yi3" path="res://dummy.png" id="6_expm7"]
[ext_resource type="Texture2D" uid="uid://bm2he8lqutgef" path="res://bg-back.png" id="8_jmuxi"]
[ext_resource type="Texture2D" uid="uid://blgy3trnwfhuj" path="res://bg-light.png" id="9_woec7"]
[ext_resource type="Texture2D" uid="uid://deo027oklluei" path="res://bg-fore.png" id="10_ukf5i"]
[ext_resource type="Texture2D" uid="uid://cu0f3vei0iwys" path="res://chain_link_1.png" id="12_artjr"]
[ext_resource type="Texture2D" uid="uid://gjt23p0dv2km" path="res://chain_link_2.png" id="13_clq70"]
[ext_resource type="PackedScene" uid="uid://cgago8t7hpva8" path="res://hammer.tscn" id="14_lphed"]
[ext_resource type="PackedScene" uid="uid://cdoqw6hbpcr4" path="res://sword.tscn" id="14_u3501"]
[ext_resource type="PackedScene" uid="uid://dov6q8pb176ns" path="res://sword2.tscn" id="15_vf282"]
[ext_resource type="PackedScene" uid="uid://c37j6rwhvb6n3" path="res://enemy.tscn" id="17_7akbg"]
[ext_resource type="Script" path="res://EnemyManager.gd" id="18_tajs1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bvuu"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8gre"]
size = Vector2(11.625, 4.5)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(49, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vjue"]
size = Vector2(54, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luryw"]
size = Vector2(57, 1429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wdrx"]
size = Vector2(2253, 80)

[sub_resource type="Curve2D" id="Curve2D_5eldu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -367, 276, 0, 0, 0, 0, -407, 188, 0, 0, 0, 0, -407, -68, 0, 0, 0, 0, 129, -116, 0, 0, 0, 0, 433, -100, 0, 0, 0, 0, 497, 84, 0, 0, 0, 0, 465, 268)
}
point_count = 7

[node name="Main" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_sqd3l")]

[node name="DebugLayer" type="CanvasLayer" parent="."]

[node name="DebugText" type="CanvasLayer" parent="DebugLayer"]
script = ExtResource("2")

[node name="Speedometer" type="Label" parent="DebugLayer/DebugText"]
offset_right = 64.0
offset_bottom = 40.0
text = "SPEED"

[node name="Timer" type="Timer" parent="DebugLayer/DebugText"]

[node name="DamageText" type="CanvasLayer" parent="DebugLayer"]

[node name="DebugText2" type="CanvasLayer" parent="DebugLayer"]
script = ExtResource("3_kfe6f")

[node name="Monitor" type="Label" parent="DebugLayer/DebugText2"]
offset_top = 25.0
offset_right = 40.0
offset_bottom = 48.0

[node name="DebugVector" type="Node2D" parent="."]
visible = false
script = ExtResource("3_ctnmf")

[node name="LinearVector" type="Line2D" parent="DebugVector"]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0, 0.282353, 1, 1)

[node name="AddVector" type="Line2D" parent="DebugVector"]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="Target" type="Node2D" parent="."]
position = Vector2(72, 60)

[node name="Chain" type="Node2D" parent="Target"]

[node name="Base" type="StaticBody2D" parent="Target/Chain"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Base"]
shape = SubResource("RectangleShape2D_6bvuu")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Base"]
z_index = -5
scale = Vector2(0.160381, 0.160381)
texture = ExtResource("12_artjr")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Base"]
position = Vector2(0, 2)
node_a = NodePath("..")
node_b = NodePath("../../Link")

[node name="Link" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 6)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link"]
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link"]
z_index = -4
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("13_clq70")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link"]
position = Vector2(0, 3)
node_a = NodePath("..")
node_b = NodePath("../../Link2")

[node name="Link2" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 12)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link2"]
position = Vector2(-0.1875, 0)
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link2"]
z_index = -5
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("12_artjr")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link2"]
position = Vector2(0, 4)
node_a = NodePath("..")
node_b = NodePath("../../Link3")

[node name="Link3" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 18)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link3"]
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link3"]
z_index = -4
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("13_clq70")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link3"]
visible = false
position = Vector2(0, 3)
node_a = NodePath("..")
node_b = NodePath("../../Link4")

[node name="Link4" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 25)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link4"]
position = Vector2(-0.1875, 0)
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link4"]
z_index = -5
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("12_artjr")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link4"]
visible = false
position = Vector2(0, 4)
node_a = NodePath("..")
node_b = NodePath("../../Link5")

[node name="Link5" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 32)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link5"]
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link5"]
z_index = -4
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("13_clq70")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link5"]
visible = false
position = Vector2(0, 3)
node_a = NodePath("..")
node_b = NodePath("../../Link6")

[node name="Link6" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 39)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link6"]
position = Vector2(-0.1875, 0)
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link6"]
z_index = -5
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("12_artjr")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link6"]
visible = false
position = Vector2(0, 4)
node_a = NodePath("..")
node_b = NodePath("../../Link7")

[node name="Link7" type="RigidBody2D" parent="Target/Chain"]
position = Vector2(0, 46)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Chain/Link7"]
shape = SubResource("RectangleShape2D_f8gre")

[node name="Sprite2D" type="Sprite2D" parent="Target/Chain/Link7"]
z_index = -4
scale = Vector2(0.164551, 0.164551)
texture = ExtResource("13_clq70")

[node name="PinJoint2D" type="PinJoint2D" parent="Target/Chain/Link7"]
position = Vector2(0, 3)
node_a = NodePath("..")
node_b = NodePath("../../../Dummy")

[node name="Dummy" type="RigidBody2D" parent="Target"]
position = Vector2(0, 87)
mass = 3.06122
max_contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
script = ExtResource("4_m84gs")
mortal = false
SplashObj = ExtResource("5_nfn67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Dummy"]
shape = SubResource("3")

[node name="Polygon2D" type="Polygon2D" parent="Target/Dummy"]
visible = false
polygon = PackedVector2Array(-24, -32, 24, -32, 24, 32, -24, 32)

[node name="Sprite2D" type="Sprite2D" parent="Target/Dummy"]
z_index = -5
position = Vector2(-0.465, 1.08)
scale = Vector2(0.130208, 0.130208)
texture = ExtResource("6_expm7")

[node name="HitArea" type="Area2D" parent="Target/Dummy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Dummy/HitArea"]
shape = SubResource("RectangleShape2D_4vjue")

[node name="Background" type="Node2D" parent="."]
position = Vector2(224, 224)
scale = Vector2(0.288739, 0.288739)

[node name="Back" type="Sprite2D" parent="Background"]
z_index = -10
texture = ExtResource("8_jmuxi")

[node name="Light" type="Sprite2D" parent="Background"]
visible = false
z_index = 2
texture = ExtResource("9_woec7")

[node name="Fore" type="Sprite2D" parent="Background"]
z_index = 10
texture = ExtResource("10_ukf5i")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(224, 224)
zoom = Vector2(1.9, 1.9)
script = ExtResource("3")

[node name="Walls" type="Node2D" parent="."]

[node name="Left wall" type="StaticBody2D" parent="Walls"]
position = Vector2(-317, 214)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Left wall"]
position = Vector2(18.5, -503.5)
shape = SubResource("RectangleShape2D_luryw")

[node name="Right wall" type="StaticBody2D" parent="Walls"]
position = Vector2(730, 234)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Right wall"]
position = Vector2(23, -524)
shape = SubResource("RectangleShape2D_luryw")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(335, 437)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(-9.5, 30)
shape = SubResource("RectangleShape2D_5wdrx")

[node name="Sword" parent="." instance=ExtResource("14_u3501")]
position = Vector2(170, 296)

[node name="Hammer" parent="." instance=ExtResource("14_lphed")]
position = Vector2(244, 325)

[node name="Sword2" parent="." instance=ExtResource("15_vf282")]
position = Vector2(355, 359)

[node name="EnemyManager" type="Node2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(175, 92)
script = ExtResource("18_tajs1")
enemy = ExtResource("17_7akbg")
player = NodePath("../Player")

[node name="SpawnPath" type="Path2D" parent="EnemyManager"]
curve = SubResource("Curve2D_5eldu")

[node name="SpawnLocation" type="PathFollow2D" parent="EnemyManager/SpawnPath"]
position = Vector2(-367, 276)
rotation = -1.99742

[node name="Timer" type="Timer" parent="EnemyManager"]
wait_time = 5.0
autostart = true

[connection signal="dash" from="Player" to="DebugLayer/DebugText" method="_on_Player_dash"]
[connection signal="debug" from="Player" to="DebugLayer/DebugText2" method="_on_player_debug"]
[connection signal="speed" from="Player" to="DebugLayer/DebugText" method="_on_Player_speed"]
[connection signal="vector" from="Player" to="DebugVector" method="_on_Player_vector"]
[connection signal="timeout" from="DebugLayer/DebugText/Timer" to="DebugLayer/DebugText" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Target/Dummy" to="Target/Dummy" method="_on_body_entered"]
[connection signal="area_entered" from="Target/Dummy/HitArea" to="Target/Dummy" method="_on_area_entered"]
[connection signal="area_exited" from="Target/Dummy/HitArea" to="Target/Dummy" method="_on_area_exited"]
[connection signal="timeout" from="EnemyManager/Timer" to="EnemyManager" method="_on_timer_timeout"]
